# portfolio

./: .gitignore  Cargo.toml  Dockerfile  README.md  astro.config.mjs  build.sh  calculator.py  commit-conventions.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rsw.toml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts  webpack.config.ts
.rsw/: rsw.crates  rsw.err  rsw.info
ActivePython-3.8/: activestate.yaml
Comsci/: example-app.html  mine.html  testing.js
chris-courses/: home-page.html
crates/nannou-1/src/: sketch.rs
crates/nannou-2/: Cargo.toml
crates/nannou-2/src/: lib.rs  main.rs  sketch.rs  three_points.rs
js-learning/: testing.html
netflix-clone/: netflix-clone.html
src/: app.css  app.d.ts  app.html  app.pcss  consts.ts  lib.rs  main.rs
src/components/: BaseHead.astro  Dashboard.svelte  Footer.astro
src/crates/: epicycloids.rs  three_points.rs
src/layouts/: Base.astro  BaseLayout.astro  BlogPost.astro
src/lib/: consts.ts  utils.ts
src/lib/crates/epicyclogons/: Cargo.toml
src/lib/crates/epicyclogons/src/: epicyclogons.rs  lib.rs  main.rs
src/lib/crates/epicycloids/: Cargo.toml
src/lib/crates/epicycloids/src/: epicycloids.rs  geometry.rs  lib.rs  main.rs
src/lib/crates/game_of_life/: Cargo.toml
src/lib/crates/game_of_life/src/: game_of_life.rs  lib.rs  main.rs
src/lib/crates/given-example/: Cargo.toml
src/lib/crates/life_v2/: Cargo.toml
src/lib/crates/nannou-0/: Cargo.toml
src/lib/crates/nannou-1/: Cargo.toml
src/lib/crates/nannou-2/: Cargo.toml
src/lib/crates/three-squares/: Cargo.toml
src/lib/crates/three_squares/: Cargo.toml
src/pages/: index.astro  nannou-embed.astro
src/pages/blog/: index.astro
src/pages/dashboard/: index.astro
src/pages/test/: index.astro
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/[projectName]/: +page.server.ts  +page.svelte
src/routes/[projectName]/nannou-embed/: +page.server.ts  +page.svelte
src/routes/[project]/: +page.server.ts  +page.svelte
src/routes/[project]/nannou-embed/: +page.server.ts  +page.svelte
src/routes/dashboard/: +page.server.ts  +page.svelte
src/routes/malware/: +page.svelte
src/routes/nannou-embed/: +page.server.ts  +page.svelte
src/routes/projects/[projectName]/: +page.server.ts  +page.svelte
src/routes/sketches/[sketchName]/: +page.server.ts  +page.svelte  +page.ts
src/src/routes/: +page.svelte
src/styles/: global.css
static/: Alex Kammin - EE Final.docx
static/sketches/descriptions/: epicyclogons.md  epicycloids.md  game_of_life.md  three_squares.md
web/: build-commands.txt
(+11 files in other folders)
