[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
nannou = { version="0.19.0", features =["wasm-experimental"]}
nannou_egui = "0.19.0"
geo = "0.29.3"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.32"
async-std = { version = "1.10.0", features = ["unstable"] }
tokio = "1.43.0"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "debuginfo"

[[bin]]
name = "nannou_web_compat"
path = "src/main.rs"

[lib]
name = "nannou_web_test"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# # These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.33"
futures = "0.1.27"
js-sys = "0.3.22"
