# You must change these to your own details.
[package]
name = "epicycloids"
description = "template repository to run nannou app both in native app and web browser."
version = "0.0.1"
authors = ["Alex"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"
resolver = "2"

[[bin]]
name = "nannou_web_compat"
path = "src/main.rs"

[lib]
name = "nannou_web_test"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.32"
async-std = { version = "1.10.0", features = ["unstable"] }
nannou = { version = "0.19.0", features = ["wasm-experimental"] }
geo = "0.29.3"
nannou_egui = "0.19.0"

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# # These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.33"
futures = "0.1.27"
js-sys = "0.3.22"
